--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,9 +79,9 @@ input:focus {
 	color: #f69165;
 }
 
-.header-top-area-left ul li.icon-active a {
+/* .header-top-area-left ul li.icon-active a {
 	color: #f69165;
-}
+} */
 
 .header-top-area-right-content {
     height: 40px;
@@ -392,12 +392,16 @@ div#tns1-ow {
     background: #00cce1;
     color: #fff;
     font-size: 25px;
+	transition: .3s;
+}
+
+.header-slider-area .tns-controls button:hover {
+	background: #f69165;
 }
 
 .header-slider-area .tns-controls button[data-controls="prev"] {
     right: 0px;
     left: auto;
-	background: #f69165;
 }
 
 .header-slider-area .tns-controls button:focus,
@@ -592,11 +596,6 @@ div#tns1-ow {
 	border: 2px solid #f69165;
 }
 
-.doctor-area .icon-active {
-	background: #f69165;
-	border: 2px solid #f69165;
-}
-
 .doctor-area-content:hover .doctor-area-main-content {
 	border-bottom: 5px solid #f69165;
 }
@@ -667,10 +666,6 @@ div#tns1-ow {
 	color: #f69165;
 }
 
-.box-active {
-	border: 5px solid #f69165;
-}
-
 .box-active h3 , 
 .box-active a {
 	color: #f69165;
@@ -734,7 +729,7 @@ div#tns1-ow {
     color: #00cce1;
 }
 
-.pricing-bottom-content ul li a {
+.pricing-bottom-content ul li {
     color: #707070;
     margin-top: 30px;
     display: block;
@@ -772,28 +767,6 @@ div#tns1-ow {
 .pricing-content:hover .pricing-button a {
 	background: #f69165; 
 }
-
-.pricing-active {
-	border: 6px solid #f69165;
-}
-
-.pricing-active .pricing-top-content h3 {
-	color: #f69165;
-}
-
-.pricing-active .pricing-middle-content {
-	background: #f69165;
-}
-
-.pricing-active .pricing-middle-content  h2 ,
-.pricing-active .pricing-middle-content  span {
-	color: #fff;
-}
-
-.pricing-active .pricing-button a {
-	background: #f69165; 
-}
-
 
 /* pricing-area-end */
 
@@ -1018,12 +991,16 @@ div#tns1-ow {
     background: #00cce1;
     color: #fff;
     font-size: 25px;
+	transition: .3s;
+}
+
+.client-area .tns-controls button:hover {
+	background: #f69165;
 }
 
 .client-area .tns-controls button[data-controls="prev"] {
     right: 40px;
     left: auto;
-	background: #f69165;
 }
 
 .client-area .tns-controls button:focus {
@@ -1212,21 +1189,25 @@ div#tns1-ow {
     margin-top: 3px;
 }
 
-.footer-main-icon a {
-    margin-right: 10px;
-    color: #fff;
-    background: #323232;
-    padding: 10px;
-    font-size: 18px;
+.footer-main-icon ul li a {
+	display: block;
+	margin-right: 5px;
+	width: 40px;
+	height: 40px;
+	color: #fff;
+	font-size: 18px;
+	background: #323232;
+	text-align: center;
+	line-height: 40px;
 	transition: .3s;
 }
 
-.footer-main-icon a:hover {
+.footer-main-icon ul li a:hover {
 	background: #f69165;
 }
 
-.footer-main-icon .active {
-	background: #f69165;
+.footer-main-icon ul li {
+	display: inline-block;
 }
 
 footer {
