--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -174,6 +174,10 @@
 		grid-template-columns : auto;
 	}
 	
+	.header-top-area-input input {
+		width: 100%;
+	}
+	
 	.header-middle-logo-area {
 		text-align: center;
 	}
@@ -384,7 +388,9 @@
 		margin-bottom: 20px;
 	}
 	
-	
+	.header-top-area-input input {
+		width: 100%;
+	}
 	
 	/* header-slider */
 	
@@ -679,6 +685,10 @@
 	
 	.header-right-main-icon-content.call {
 		margin-right: 66px;
+	}
+	
+	.header-top-area-input input {
+		width: 100%;
 	}
 	
 	/* header-slider */
